--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-
 # environment variables
 .env
 .env.production
@@ -18,3 +17,7 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 .vercel
+
+# misc
+.idea
+.vscode
