--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@azat-io/eslint-config": "1.6.0",
         "@azat-io/eslint-config-astro": "1.6.0",
         "@azat-io/eslint-config-typescript": "1.6.0",
+        "@eslint/eslintrc": "3.0.0",
         "@types/node": "18.16.18",
         "@types/ramda": "0.29.9",
         "@typescript-eslint/eslint-plugin": "6.12.0",
@@ -61,6 +62,7 @@
         "bcrypt": "5.1.1",
         "commitizen": "4.3.0",
         "cz-git": "1.8.0",
+        "dayjs": "1.11.10",
         "eslint": "8.54.0",
         "eslint-config-turbo": "1.10.16",
         "eslint-define-config": "2.0.0",
